--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,9 +46,10 @@ variables:
   DOCKER_DRIVER: 'overlay2'
 
 ###############################################################################
-# `lint` stage: `commitlint` & `pre-commit`
+# `lint` stage: `commitlint`, `pre-commit` & `rubocop` (latest, failure allowed)
 ###############################################################################
 commitlint:
+  allow_failure: true
   stage: *stage_lint
   image: *image_commitlint
   script:
@@ -74,6 +75,7 @@ commitlint:
                   --verbose'
 
 pre-commit:
+  allow_failure: true
   stage: *stage_lint
   image: *image_precommit
   # https://pre-commit.com/#gitlab-ci-example
@@ -86,18 +88,18 @@ pre-commit:
   script:
     - 'pre-commit run --all-files --color always --verbose'
 
-# Use a separate job for `rubocop` other than the one potentially run by `pre-commit`
-# - The `pre-commit` check will only be available for formulas that pass the default
-#   `rubocop` check -- and must continue to do so
-# - This job is allowed to fail, so can be used for all formulas
-# - Furthermore, this job uses all of the latest `rubocop` features & cops,
-#   which will help when upgrading the `rubocop` linter used in `pre-commit`
-rubocop:
-  allow_failure: true
-  stage: *stage_lint
-  image: *image_rubocop
-  script:
-    - 'rubocop -d -P -S --enable-pending-cops'
+# # Use a separate job for `rubocop` other than the one potentially run by `pre-commit`
+# # - The `pre-commit` check will only be available for formulas that pass the default
+# #   `rubocop` check -- and must continue to do so
+# # - This job is allowed to fail, so can be used for all formulas
+# # - Furthermore, this job uses all of the latest `rubocop` features & cops,
+# #   which will help when upgrading the `rubocop` linter used in `pre-commit`
+# rubocop:
+#   allow_failure: true
+#   stage: *stage_lint
+#   image: *image_rubocop
+#   script:
+#     - 'rubocop -d -P -S --enable-pending-cops'
 
 ###############################################################################
 # Define `test` template
@@ -123,55 +125,53 @@ rubocop:
 ## Define the rest of the matrix based on Kitchen testing
 # Make sure the instances listed below match up with
 # the `platforms` defined in `kitchen.yml`
-v3002-py3-debian-10-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-debian-9-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-ubuntu-2004-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-ubuntu-1804-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-ubuntu-1604-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-centos-8-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-centos-7-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-fedora-33-3002-2-py3: {extends: '.test_instance'}
-# v3002-py3-fedora-32-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-opensuse-leap-152-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-opensuse-tmbl-latest-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-amazonlinux-2-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-oraclelinux-8-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-oraclelinux-7-3002-2-py3: {extends: '.test_instance'}
-# v3002-py3-arch-base-latest-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-gentoo-stage3-latest-3002-2-py3: {extends: '.test_instance'}
-v3002-py3-gentoo-stage3-systemd-3002-2-py3: {extends: '.test_instance'}
-v3001-py3-debian-10-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-debian-9-3001-4-py3: {extends: '.test_instance'}
-v3001-py3-ubuntu-2004-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-ubuntu-1804-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-ubuntu-1604-3001-4-py3: {extends: '.test_instance'}
-v3001-py3-centos-8-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-centos-7-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-fedora-33-3001-4-py3: {extends: '.test_instance'}
-v3001-py3-fedora-32-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-opensuse-leap-152-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-opensuse-tmbl-latest-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-amazonlinux-2-3001-4-py3: {extends: '.test_instance'}
-v3001-py3-oraclelinux-8-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-oraclelinux-7-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-arch-base-latest-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-gentoo-stage3-latest-3001-4-py3: {extends: '.test_instance'}
-# v3001-py3-gentoo-stage3-systemd-3001-4-py3: {extends: '.test_instance'}
-# v3000-py3-debian-10-3000-6-py3: {extends: '.test_instance'}
-v3000-py3-debian-9-3000-6-py3: {extends: '.test_instance'}
-v3000-py3-ubuntu-1804-3000-6-py3: {extends: '.test_instance'}
-# v3000-py3-ubuntu-1604-3000-6-py3: {extends: '.test_instance'}
-# v3000-py3-centos-8-3000-6-py3: {extends: '.test_instance'}
-v3000-py3-centos-7-3000-6-py3: {extends: '.test_instance'}
-# v3000-py3-opensuse-leap-152-3000-6-py3: {extends: '.test_instance'}
-# v3000-py3-amazonlinux-2-3000-6-py3: {extends: '.test_instance'}
-# v3000-py3-oraclelinux-8-3000-6-py3: {extends: '.test_instance'}
-v3000-py3-oraclelinux-7-3000-6-py3: {extends: '.test_instance'}
-# v3000-py3-gentoo-stage3-latest-3000-6-py3: {extends: '.test_instance'}
-# v3000-py3-gentoo-stage3-systemd-3000-6-py3: {extends: '.test_instance'}
-# v3000-py2-ubuntu-1804-3000-6-py2: {extends: '.test_instance'}
-v3000-py2-ubuntu-1604-3000-6-py2: {extends: '.test_instance'}
-# v3000-py2-arch-base-latest-3000-6-py2: {extends: '.test_instance'}
+v3002-py3-debian-10-3002-5-py3: {extends: '.test_instance'}
+v3002-py3-debian-9-3002-5-py3: {extends: '.test_instance'}
+v3002-py3-ubuntu-2004-3002-5-py3: {extends: '.test_instance'}
+v3002-py3-ubuntu-1804-3002-5-py3: {extends: '.test_instance'}
+v3002-py3-ubuntu-1604-3002-5-py3: {extends: '.test_instance'}
+v3002-py3-centos-8-3002-5-py3: {extends: '.test_instance'}
+v3002-py3-centos-7-3002-5-py3: {extends: '.test_instance'}
+v3002-py3-fedora-33-3002-5-py3: {extends: '.test_instance'}
+# v3002-py3-fedora-32-3002-5-py3: {extends: '.test_instance'}
+v3002-py3-amazonlinux-2-3002-5-py3: {extends: '.test_instance'}
+v3002-py3-oraclelinux-8-3002-5-py3: {extends: '.test_instance'}
+v3002-py3-oraclelinux-7-3002-5-py3: {extends: '.test_instance'}
+# v3002-py3-arch-base-latest-3002-5-py3: {extends: '.test_instance'}
+v3002-py3-gentoo-stage3-latest-3002-5-py3: {extends: '.test_instance'}
+v3002-py3-gentoo-stage3-systemd-3002-5-py3: {extends: '.test_instance'}
+v3001-py3-debian-10-3001-6-py3: {extends: '.test_instance'}
+# v3001-py3-debian-9-3001-6-py3: {extends: '.test_instance'}
+v3001-py3-ubuntu-2004-3001-6-py3: {extends: '.test_instance'}
+# v3001-py3-ubuntu-1804-3001-6-py3: {extends: '.test_instance'}
+# v3001-py3-ubuntu-1604-3001-6-py3: {extends: '.test_instance'}
+v3001-py3-centos-8-3001-6-py3: {extends: '.test_instance'}
+# v3001-py3-centos-7-3001-6-py3: {extends: '.test_instance'}
+# v3001-py3-fedora-33-3001-6-py3: {extends: '.test_instance'}
+v3001-py3-fedora-32-3001-6-py3: {extends: '.test_instance'}
+# v3001-py3-opensuse-leap-152-3001-6-py3: {extends: '.test_instance'}
+# v3001-py3-opensuse-tmbl-latest-3001-6-py3: {extends: '.test_instance'}
+# v3001-py3-amazonlinux-2-3001-6-py3: {extends: '.test_instance'}
+v3001-py3-oraclelinux-8-3001-6-py3: {extends: '.test_instance'}
+# v3001-py3-oraclelinux-7-3001-6-py3: {extends: '.test_instance'}
+# v3001-py3-arch-base-latest-3001-6-py3: {extends: '.test_instance'}
+# v3001-py3-gentoo-stage3-latest-3001-6-py3: {extends: '.test_instance'}
+# v3001-py3-gentoo-stage3-systemd-3001-6-py3: {extends: '.test_instance'}
+# v3000-py3-debian-10-3000-8-py3: {extends: '.test_instance'}
+v3000-py3-debian-9-3000-8-py3: {extends: '.test_instance'}
+v3000-py3-ubuntu-1804-3000-8-py3: {extends: '.test_instance'}
+# v3000-py3-ubuntu-1604-3000-8-py3: {extends: '.test_instance'}
+# v3000-py3-centos-8-3000-8-py3: {extends: '.test_instance'}
+v3000-py3-centos-7-3000-8-py3: {extends: '.test_instance'}
+# v3000-py3-opensuse-leap-152-3000-8-py3: {extends: '.test_instance'}
+# v3000-py3-amazonlinux-2-3000-8-py3: {extends: '.test_instance'}
+# v3000-py3-oraclelinux-8-3000-8-py3: {extends: '.test_instance'}
+v3000-py3-oraclelinux-7-3000-8-py3: {extends: '.test_instance'}
+# v3000-py3-gentoo-stage3-latest-3000-8-py3: {extends: '.test_instance'}
+# v3000-py3-gentoo-stage3-systemd-3000-8-py3: {extends: '.test_instance'}
+# v3000-py2-ubuntu-1804-3000-8-py2: {extends: '.test_instance'}
+v3000-py2-ubuntu-1604-3000-8-py2: {extends: '.test_instance'}
+# v3000-py2-arch-base-latest-3000-8-py2: {extends: '.test_instance'}
 
 ###############################################################################
 # `release` stage: `semantic-release`
