--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,10 @@ cache: 'bundler'
 services:
   - docker
 
+## Use the latest gems for this `master` run
+## https://docs.travis-ci.com/user/job-lifecycle/
+before_install: bundle update
+
 ## Script to run for the test stage
 script:
   - bin/kitchen verify "${INSTANCE}"
@@ -37,114 +41,10 @@ stages:
   #   if: 'branch = master AND type != pull_request'
 jobs:
   include:
-    ## Define the test stage that runs the linters (and testing matrix, if applicable)
-
-    # Run all of the linters in a single job
-    - language: 'node_js'
-      node_js: 'lts/*'
-      env: 'Lint'
-      name: 'Lint: salt-lint, yamllint, rubocop, shellcheck & commitlint'
-      before_install: 'skip'
-      script:
-        # Install and run `salt-lint`
-        - pip install --user salt-lint
-        - git ls-files -- '*.sls' '*.jinja' '*.j2' '*.tmpl' '*.tst'
-                        | xargs salt-lint
-        # Install and run `yamllint`
-        # Need at least `v1.17.0` for the `yaml-files` setting
-        - pip install --user yamllint>=1.17.0
-        - yamllint -s .
-        # Install and run `rubocop`
-        - gem install rubocop
-        - rubocop -d
-        # Run `shellcheck` (already pre-installed in Travis)
-        - shellcheck --version
-        - git ls-files -- '*.sh' '*.bash' '*.ksh'
-                        | xargs shellcheck
-        # Install and run `commitlint`
-        - npm i -D @commitlint/config-conventional
-                   @commitlint/travis-cli
-        - commitlint-travis
-
-    # Run `pre-commit` linters in a single job
-    - language: 'python'
-      env: 'Lint_pre-commit'
-      name: 'Lint: pre-commit'
-      before_install: 'skip'
-      cache:
-        directories:
-          - $HOME/.cache/pre-commit
-      script:
-        # Install and run `pre-commit`
-        - pip install pre-commit==2.7.1
-        - pre-commit run --all-files --color always --verbose
-        - pre-commit run --color always --hook-stage manual --verbose commitlint-travis
 
     ## Define the rest of the matrix based on Kitchen testing
     # Make sure the instances listed below match up with
     # the `platforms` defined in `kitchen.yml`
-    - env: INSTANCE=v3003-py3-debian-10-3003-0-py3
-    # - env: INSTANCE=v3003-py3-debian-9-3003-0-py3
-    - env: INSTANCE=v3003-py3-ubuntu-2004-3003-0-py3
-    # - env: INSTANCE=v3003-py3-ubuntu-1804-3003-0-py3
-    - env: INSTANCE=v3003-py3-centos-8-3003-0-py3
-    # - env: INSTANCE=v3003-py3-centos-7-3003-0-py3
-    - env: INSTANCE=v3003-py3-fedora-34-3003-0-py3
-    - env: INSTANCE=v3003-py3-fedora-33-3003-0-py3
-    # - env: INSTANCE=v3003-py3-fedora-32-3003-0-py3
-    - env: INSTANCE=v3003-py3-amazonlinux-2-3003-0-py3
-    - env: INSTANCE=v3003-py3-oraclelinux-8-3003-0-py3
-    # - env: INSTANCE=v3003-py3-oraclelinux-7-3003-0-py3
-    - env: INSTANCE=v3003-py3-arch-base-latest-3003-0-py3
-    - env: INSTANCE=v3003-py3-gentoo-stage3-latest-3003-0-py3
-    - env: INSTANCE=v3003-py3-gentoo-stage3-systemd-3003-0-py3
-    # - env: INSTANCE=v3002-py3-debian-10-3002-6-py3
-    - env: INSTANCE=v3002-py3-debian-9-3002-6-py3
-    # - env: INSTANCE=v3002-py3-ubuntu-2004-3002-6-py3
-    - env: INSTANCE=v3002-py3-ubuntu-1804-3002-6-py3
-    # - env: INSTANCE=v3002-py3-ubuntu-1604-3002-6-py3
-    # - env: INSTANCE=v3002-py3-centos-8-3002-6-py3
-    - env: INSTANCE=v3002-py3-centos-7-3002-6-py3
-    # - env: INSTANCE=v3002-py3-fedora-34-3002-6-py3
-    # - env: INSTANCE=v3002-py3-fedora-33-3002-6-py3
-    # - env: INSTANCE=v3002-py3-fedora-32-3002-6-py3
-    - env: INSTANCE=v3002-py3-amazonlinux-2-3002-6-py3
-    # - env: INSTANCE=v3002-py3-oraclelinux-8-3002-6-py3
-    - env: INSTANCE=v3002-py3-oraclelinux-7-3002-6-py3
-    # - env: INSTANCE=v3002-py3-arch-base-latest-3002-6-py3
-    # - env: INSTANCE=v3002-py3-gentoo-stage3-latest-3002-5-py3
-    # - env: INSTANCE=v3002-py3-gentoo-stage3-systemd-3002-5-py3
-    - env: INSTANCE=v3002-py3-opensuse-leap-152-3002-2-py3
-    - env: INSTANCE=v3002-py3-opensuse-tmbl-latest-3002-2-py3
-    - env: INSTANCE=v3001-py3-debian-10-3001-7-py3
-    # - env: INSTANCE=v3001-py3-debian-9-3001-7-py3
-    - env: INSTANCE=v3001-py3-ubuntu-2004-3001-7-py3
-    # - env: INSTANCE=v3001-py3-ubuntu-1804-3001-7-py3
-    # - env: INSTANCE=v3001-py3-ubuntu-1604-3001-7-py3
-    - env: INSTANCE=v3001-py3-centos-8-3001-7-py3
-    # - env: INSTANCE=v3001-py3-centos-7-3001-7-py3
-    # - env: INSTANCE=v3001-py3-fedora-34-3001-7-py3
-    # - env: INSTANCE=v3001-py3-fedora-33-3001-7-py3
-    - env: INSTANCE=v3001-py3-fedora-32-3001-7-py3
-    # - env: INSTANCE=v3001-py3-opensuse-leap-152-3001-7-py3
-    # - env: INSTANCE=v3001-py3-opensuse-tmbl-latest-3001-7-py3
-    # - env: INSTANCE=v3001-py3-amazonlinux-2-3001-7-py3
-    - env: INSTANCE=v3001-py3-oraclelinux-8-3001-7-py3
-    # - env: INSTANCE=v3001-py3-oraclelinux-7-3001-7-py3
-    # - env: INSTANCE=v3001-py3-arch-base-latest-3001-7-py3
-    # - env: INSTANCE=v3000-py3-debian-10-3000-9-py3
-    - env: INSTANCE=v3000-py3-debian-9-3000-9-py3
-    - env: INSTANCE=v3000-py3-ubuntu-1804-3000-9-py3
-    # - env: INSTANCE=v3000-py3-ubuntu-1604-3000-9-py3
-    # - env: INSTANCE=v3000-py3-centos-8-3000-9-py3
-    - env: INSTANCE=v3000-py3-centos-7-3000-9-py3
-    # - env: INSTANCE=v3000-py3-opensuse-leap-152-3000-9-py3
-    # - env: INSTANCE=v3000-py3-amazonlinux-2-3000-9-py3
-    # - env: INSTANCE=v3000-py3-oraclelinux-8-3000-9-py3
-    - env: INSTANCE=v3000-py3-oraclelinux-7-3000-9-py3
-    # - env: INSTANCE=v3000-py2-ubuntu-1804-3000-9-py2
-    - env: INSTANCE=v3000-py2-ubuntu-1604-3000-9-py2
-    # - env: INSTANCE=v3000-py2-arch-base-latest-3000-9-py2
 
     ## Define the release stage that runs `semantic-release`
     - stage: 'release'
@@ -172,14 +72,16 @@ jobs:
         # Run `semantic-release`
         script: 'npx semantic-release@15.14'
 
+# yamllint disable rule:line-length
 # Notification options: `always`, `never` or `change`
 notifications:
   webhooks:
-    if: 'repo = saltstack-formulas/salt-formula'
+    if: 'repo = saltstack-formulas/salt-formula OR repo = myii/salt-formula'
     urls:
-      - https://saltstack-formulas.zulipchat.com/api/v1/external/travis?api_key=HsIq3o5QmLxdnVCKF9is0FUIpkpAY79P&stream=CI&topic=saltstack-formulas%2Fsalt-formula&ignore_pull_requests=true
+      - https://saltstack-formulas.zulipchat.com/api/v1/external/travis?api_key=HsIq3o5QmLxdnVCKF9is0FUIpkpAY79P&stream=CI&topic=ci: test for upstream Salt regressions in '`'tiamat'`' instances (2021-W23b&ignore_pull_requests=true
     on_success: always  # default: always
     on_failure: always  # default: always
-    on_start: always    # default: never
+    on_start: never     # default: never
     on_cancel: always   # default: always
     on_error: always    # default: always
+# yamllint enable rule:line-length
